add finish button

--- a/html/options.html
+++ b/html/options.html
@@ -101,6 +101,7 @@ button {
   <div class="settings">
     <table>
       <tr><td>出社時</td><td><input type="text" id="start" value="" size="50" /></td></tr>
+      <tr><td>業務終了時</td><td><input type="text" id="finish" value="" size="50" /></td></tr>
       <tr><td>退社時</td><td><input type="text" id="leave" value="" size="50" /></td></tr>
     </table>
   </div>
@@ -108,6 +109,7 @@ button {
   <div class="settings">
     <table>
       <tr><td>出社時</td><td><input type="time" id="start-alarm-begin"/> - <input type="time" id="start-alarm-end"/></td></tr>
+      <tr><td>業務終了時</td><td><input type="time" id="finish-alarm-begin"/> - <input type="time" id="finish-alarm-end"/></td></tr>
       <tr><td>退社時</td><td><input type="time" id="leave-alarm-begin"/> - <input type="time" id="leave-alarm-end"/></td></tr>
     </table>
   </div>
