--- a/html/popup.html
+++ b/html/popup.html
@@ -21,7 +21,7 @@ body {
 }
 .inout {
   display: table-cell;
-  width: 50%;
+  width: 33%;
   padding: 4px 0;
   text-align: center;
   color: #999;
@@ -97,6 +97,7 @@ button.confirm:last-child {
 <body>
 <div class="inout-block">
   <p id="action1" class="inout">出社</p>
+  <p id="action3" class="inout">業終</p>
   <p id="action2" class="inout">退社</p>
 </div>
 <ul>
