--- a/html/options.html
+++ b/html/options.html
@@ -73,6 +73,7 @@ button {
 </style>
 <script src="/vendor/jquery.js"></script>
 <script src="/vendor/crypto-js.js"></script>
+<script src="/vendor/moment.js"></script>
 <script src="/js/ktr.js"></script>
 <script src="/js/options.js"></script>
 </head>
