--- a/html/popup.html
+++ b/html/popup.html
@@ -91,6 +91,7 @@ button.confirm:last-child {
 </style>
 <script src="/vendor/jquery.js"></script>
 <script src="/vendor/crypto-js.js"></script>
+<script src="/vendor/moment.js"></script>
 <script src="/js/ktr.js"></script>
 <script src="/js/popup.js"></script>
 </head>
