退社打刻時、業務終了打刻より1時間以上経過していたら備考に定型文を保存する

--- a/html/options.html
+++ b/html/options.html
@@ -114,6 +114,11 @@ button {
       <tr><td>退社時</td><td><input type="time" id="leave-alarm-begin"/> - <input type="time" id="leave-alarm-end"/></td></tr>
     </table>
   </div>
+  <h2>在社理由の定形文</h2>
+  <div class="settings">
+      <input type="text" id="remarks-template" value="" size="100" />
+      <p>退社打刻時、業務終了時刻より１時間以上の乖離がある場合、備考に自動で登録されます。</p>
+  </div>
   <button id="saveBtn">保存する</button>
 </section>
 </body>
